# GatewayEngine

./: CMakeLists.txt  README.md
src/chip/: ActiveStack.cpp  ActiveStack.h  ChipSim.cpp  ChipSim.h  ChipTemplate.cpp  ChipTemplate.h  Node.cpp  Node.h  NodeBox.cpp  NodeBox.h  TemplateList.cpp  TemplateList.h
src/circuit/: Circuit.cpp  Circuit.h  CompData.cpp  CompData.h  CompType.cpp  CompType.h  Component.cpp  Component.h  InPin.cpp  InPin.h  OutPin.cpp  OutPin.h  Pin.cpp  Pin.h  Wire.cpp  Wire.h
src/main/: Utils.h  main.cpp
